infrastructure/bee/gateways/base/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateways
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: bee-gateway
  namespace: gateways
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: nginx
  listeners:
  - name: xtinto.com-http
    hostname: "*.xtinto.com"
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: xtinto.com-https
    hostname: "*.xtinto.com"
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
        - name: xtinto.com-tls
