infrastructure/bee/gateways/base/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: gateways
spec:
  parentRefs:
  - name: bee-gateway
    sectionName: xtinto.com-http
  hostnames:
  - "*.xtinto.com"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
